commit for deploy (anotherP)

--- a/src/components/HeaderNormal/HeaderNormal.scss
+++ b/src/components/HeaderNormal/HeaderNormal.scss
@@ -12,7 +12,7 @@
         .icon {
             font-size: 50px;
             height: 46px;
-            animation:infinite-spinning 10s linear infinite;
+            // animation:infinite-spinning 10s linear infinite;
         };
         .trademark {
             font-size: 30px;
